Align navbar items using margins, add bg colour to mobile-nav,  add favicon image, make footer stick to the bottom regardless of content volume, fix footer bug on my profile page

--- a/static/css/base.css
+++ b/static/css/base.css
@@ -67,7 +67,6 @@ nav {
     background-color: #eca50b;
     color: #fff;
     padding: 0px;
-    background-color: #eca50b;
 }
 
 .navbar-collapse {
